[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
description = "A bulk file renaming utility."
documentation = "https://github.com/lyssieth/rena/wiki"
edition = "2018"
keywords = ["utility", "tool", "cli"]
license = "MIT"
name = "rena"
readme = "README.md"
repository = "https://github.com/lyssieth/rena"
version = "1.3.1"

[dependencies]
clap = { version = "3.1.6", features = [
    "suggestions",
    "color",
    "wrap_help",
    "cargo",
] }
color-eyre = { version = "0.6.1", features = ["issue-url"] }
paris = { version = "1.5.11", features = ["macros", "no_logger"] }
regex = "1.5.5"
strfmt = "0.1.6"

[dev-dependencies]
tempfile = "3.3.0"
